--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,30 @@ add_subdirectory(sources)
 
 add_executable(${PROJECT_NAME} sources/main.cpp)
 
+# Downloads Submodules
+find_package(Git QUIET)
+if(GIT_FOUND AND EXISTS "S{PROJECT_SOURCE_DIR}/.git")
+
+# Update submodules as needed
+    option(GIT_SUBMODULE "Check submodules during build" ON)
+    if(GIT_SUBMODULE)
+        message(STATUS "Submodule update")
+        execute_process(COMMAND ${GIT_EXECUTABLE}
+                        submodule update --init --recursive
+                        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+                        RESULT_VARIABLE GIT_SUBMOD_RESULT)
+        
+        if(NOT GIT_SUBMOD_RESULT EQUAL "0")
+            message(FATAL_ERROR "git submodule update --init failed with ${GIT_SUBMOD_RESULT}, please checkout submodules")
+        endif()
+    endif()
+endif()
+
+# Check each submodules
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/external/sfml/CMakeLists.txt")
+    message(FATAL_ERROR "The sfml submodule was not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodule sfml")
+endif()
+
 add_subdirectory(external/sfml)
 
 target_include_directories(${PROJECT_NAME} 
