--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,10 +32,6 @@ endif()
 
 add_subdirectory(external/sfml)
 
-add_library(
-   Animation sources/Animation.cpp sources/Animation.h
-)
-
 target_include_directories(${PROJECT_NAME} 
     PUBLIC external/sfml/include
     PUBLIC sources/
@@ -52,7 +48,7 @@ target_link_libraries(${PROJECT_NAME}
     sfml-network
     sfml-system
     sfml-window
-    animation
+    files
 )
 
 
