Collision Detection w/ platforms

--- a/sources/CMakeLists.txt
+++ b/sources/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_library(files Animation.cpp Animation.h Player.cpp Player.h)
+add_library(files
+    Animation.cpp Animation.h
+    Player.cpp Player.h
+    Platform.cpp Platform.h
+    Collider.cpp Collider.h
+)
 
